--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <p class="text-lg md:text-xl text-gray-300 max-w-2xl">
           IT Specialist | Cybersecurity Professional | Builder of things in code, cables, and cloud
         </p>
-        <div class="flex justify-center space-x-4 pt-4">
+        <div class="flex flex-col sm:flex-row items-center justify-center gap-4 sm:space-x-4 pt-4">
           <a href="#contact" class="px-6 py-3 bg-teal-500 text-gray-900 rounded-lg font-medium hover:bg-teal-400 transition">Get In Touch</a>
           <a href="#homelab" class="px-6 py-3 border border-teal-400 text-teal-400 rounded-lg font-medium hover:bg-teal-400 hover:text-gray-900 transition">View My Work</a>
         </div>
