--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andrew Parker | IT Specialist & Security Professional</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3" defer></script>
@@ -392,7 +393,7 @@
       <div class="text-center max-w-4xl mx-auto">
         <h3 class="text-3xl font-bold mb-6">Resume</h3>
         <p class="text-gray-300 mb-6">Download my resume or view my professional experience below.</p>
-        <a href="resume.pdf" target="_blank" class="inline-block px-6 py-3 border border-teal-400 text-teal-400 rounded-lg font-medium hover:bg-teal-400 hover:text-gray-900 transition mb-12">
+        <a href="resume.pdf" download class="inline-block px-6 py-3 border border-teal-400 text-teal-400 rounded-lg font-medium hover:bg-teal-400 hover:text-gray-900 transition mb-12">
           Download Resume
         </a>
         
