--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andrew Parker | IT Specialist & Security Professional</title>
-    <!-- Fix 1: Added correct path to favicon -->
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <!-- Fix 1: Corrected favicon path with absolute path -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3" defer></script>
@@ -28,11 +29,13 @@
       .project-card .project-content {
         flex-grow: 1;
       }
-      /* Fix 3: Additional style for button container */
+      /* Fix 3: Additional style for button container - improved centering */
       .hero-buttons {
         display: flex;
         justify-content: center;
         gap: 1rem;
+        width: 100%;
+        margin: 0 auto;
       }
       @media (max-width: 640px) {
         .hero-buttons {
@@ -82,8 +85,8 @@
         <p class="text-lg md:text-xl text-gray-300 max-w-2xl mx-auto">
           IT Specialist | Cybersecurity Professional | Builder of things in code, cables, and cloud
         </p>
-        <!-- Fix 3: Restructured button container -->
-        <div class="hero-buttons w-full">
+        <!-- Fix 3: Restructured button container for better centering -->
+        <div class="hero-buttons">
           <a href="mailto:acp6454@gmail.com" class="px-6 py-3 bg-teal-500 text-gray-900 rounded-lg font-medium hover:bg-teal-400 transition">Get In Touch</a>
           <a href="#homelab" class="px-6 py-3 border border-teal-400 text-teal-400 rounded-lg font-medium hover:bg-teal-400 hover:text-gray-900 transition">View My Work</a>
         </div>
@@ -407,8 +410,8 @@
       <div class="text-center max-w-4xl mx-auto">
         <h3 class="text-3xl font-bold mb-6">Resume</h3>
         <p class="text-gray-300 mb-6">Download my resume or view my professional experience below.</p>
-        <!-- Fix 2: Updated resume link to point to correct PDF -->
-        <a href="https://github.com/x0labs/portfolio/raw/main/resume.pdf" class="inline-block px-6 py-3 border border-teal-400 text-teal-400 rounded-lg font-medium hover:bg-teal-400 hover:text-gray-900 transition mb-12">
+        <!-- Fix 2: Direct link to resume.pdf in root -->
+        <a href="/resume.pdf" class="inline-block px-6 py-3 border border-teal-400 text-teal-400 rounded-lg font-medium hover:bg-teal-400 hover:text-gray-900 transition mb-12">
           Download Resume
         </a>
         
