--- a/index.html
+++ b/index.html
@@ -528,12 +528,12 @@
               </h5>
               <ul class="space-y-4 text-gray-300">
                 <li>
-                  <p class="font-medium">Associate's Degree, Network Administration</p>
-                  <p class="text-sm text-gray-400">Salt Lake Community College, 2021-2023</p>
+                  <p class="font-medium">Bachelor of Science in Biology</p>
+                  <p class="text-sm text-gray-400">University of Utah, December 2023</p>
                 </li>
                 <li>
-                  <p class="font-medium">Currently pursuing Bachelor's in Cybersecurity</p>
-                  <p class="text-sm text-gray-400">Western Governors University, 2023-Present</p>
+                  <p class="font-medium">Business Administration Minor</p>
+                  <p class="text-sm text-gray-400">David Eccles School of Business, University of Utah, December 2023</p>
                 </li>
               </ul>
             </div>
@@ -545,15 +545,11 @@
               </h5>
               <ul class="space-y-4 text-gray-300">
                 <li>
-                  <p class="font-medium">CompTIA Security+</p>
-                  <p class="text-sm text-gray-400">Certified 2023</p>
+                  <p class="font-medium">CompTIA Security+ ce</p>
+                  <p class="text-sm text-gray-400">February 2024</p>
                 </li>
                 <li>
-                  <p class="font-medium">Microsoft 365 Certified: Modern Desktop Administrator</p>
-                  <p class="text-sm text-gray-400">Certified 2024</p>
-                </li>
-                <li>
-                  <p class="font-medium">Cisco CCNA (In Progress)</p>
+                  <p class="font-medium">Currently studying for Cisco CCNA</p>
                   <p class="text-sm text-gray-400">Expected 2025</p>
                 </li>
               </ul>
