--- a/index.html
+++ b/index.html
@@ -566,10 +566,10 @@
         </div>
         
         <div class="flex space-x-6">
-          <a href="https://github.com/yourname" class="text-gray-400 hover:text-teal-400 transition">
+          <a href="https://github.com/x0labs" class="text-gray-400 hover:text-teal-400 transition">
             <i class="fab fa-github text-2xl"></i>
           </a>
-          <a href="https://linkedin.com/in/yourname" class="text-gray-400 hover:text-teal-400 transition">
+          <a href="https://linkedin.com/in/andrew-parker-it" class="text-gray-400 hover:text-teal-400 transition">
             <i class="fab fa-linkedin text-2xl"></i>
           </a>
           <a href="mailto:acp6454@gmail.com" class="text-gray-400 hover:text-teal-400 transition">
