--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <ul class="space-y-3 text-gray-300">
               <li class="flex items-start">
                 <i class="fas fa-check-circle text-teal-400 mt-1 mr-2"></i>
-                <span>Proxmox hypervisor running on dedicated server hardware with 32GB RAM and 4TB storage</span>
+                <span>Proxmox hypervisor running on dedicated server hardware built for virtualization</span>
               </li>
               <li class="flex items-start">
                 <i class="fas fa-check-circle text-teal-400 mt-1 mr-2"></i>
