--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
         <p class="text-gray-300 mb-6">Download my resume or view my professional experience below.</p>
         
         <!-- Fixed resume download link using correct GitHub URL -->
-        <a href="https://github.com/x0labs/portfolio/blob/main/resume.pdf" target="_blank" class="inline-block px-6 py-3 border border-teal-400 text-teal-400 rounded-lg font-medium hover:bg-teal-400 hover:text-gray-900 transition mb-12">
+        <a href="https://raw.githubusercontent.com/x0labs/portfolio/main/resume.pdf" download="Andrew_Parker_Resume.pdf" class="inline-block px-6 py-3 border border-teal-400 text-teal-400 rounded-lg font-medium hover:bg-teal-400 hover:text-gray-900 transition mb-12">
           Download Resume
         </a>
         
