--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
         <div class="button-container">
           <a href="mailto:acp6454@gmail.com" class="centered-button primary-button">Get In Touch</a>
           <a href="#homelab" class="centered-button secondary-button">View My Work</a>
+          <a href="https://linkedin.com/in/andrew-parker-it" class="centered-button secondary-button">
+            <i class="fab fa-linkedin mr-2"></i>LinkedIn
+          </a>
         </div>
       </div>
     </section>
