--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                 <h5 class="text-gray-300 mb-3">Deer Valley Resort, Park City</h5>
                 <ul class="text-gray-400 text-sm space-y-2 list-disc pl-4">
                   <li>Tier 3 IT support for enterprise environment at a large ski resort</li>
-                  <li>Vulnerability remediation, patch management, and device hardening</li>
+                  <li>Supported enterprise infrastructure through VMware vSphere management, server patching, and system documentation</li>
                   <li>Server and network maintenance including DHCP, DNS, Cisco switch config</li>
                   <li>Advanced troubleshooting and incident triage</li>
                   <li>GPO management, domain access policy enforcement</li>
